# vcpkg-examples

./: README.md
hello-ffmpeg/: CMakeLists.txt
hello-ffmpeg/src/: main.cpp
hello-sdl2/: CMakeLists.txt  vcpkg-configuration.json
hello-sdl2/src/: main.cpp
